[package]
name = "avalanche-macro"
version = "0.0.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", default-features = false }
proc-macro-error = "1.0.3"
rand = "0.7"

[dependencies.syn]
version = "1.0.72"
features = ["full"]