[package]
name = "avalanche-macro"
version = "0.1.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
repository = "https://github.com/DJankauskas/avalanche"
homepage = "https://github.com/DJankauskas/avalanche"
keywords = ["reactive"]
categories = ["gui"]
description = "Proc macro implementation crate for avalanche"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", default-features = false }
proc-macro-error = "1.0.3"
proc-macro-crate = "1.1"
rand = "0.7"

[dependencies.syn]
version = "1.0.72"
features = ["full"]