[package]
name = "avalanche-web"
version = "0.0.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
edition = "2018"

[dependencies]
avalanche = {path = '../avalanche'}
wasm-bindgen = "0.2.58"
gloo-events = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "EventTarget",
    "Window",
    "Text",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "HtmlHeadingElement",
    "HtmlBodyElement",
    "HtmlBodyElement",
    "HtmlQuoteElement",
    "HtmlHrElement",
    "HtmlLiElement",
    "HtmlOListElement",
    "HtmlParagraphElement",
    "HtmlPreElement",
    "HtmlUListElement",
    "HtmlAnchorElement",
    "HtmlBrElement",
    "HtmlSpanElement",
    "HtmlDataElement",
    "HtmlTimeElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlVideoElement",
    "HtmlImageElement",
    "HtmlMapElement",
    "HtmlTrackElement",
    "HtmlEmbedElement",
    "HtmlIFrameElement",
    "HtmlObjectElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlModElement",
    "HtmlTableCaptionElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableCellElement",
    "HtmlTableSectionElement",
    "HtmlTableRowElement",
    "HtmlButtonElement",
    "HtmlDataListElement",
    "HtmlDataListElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlMeterElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlProgressElement",
    "HtmlSelectElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlElement",
    "Event",
    "AnimationEvent",
    "CompositionEvent",
    "DragEvent",
    "FocusEvent",
    "KeyboardEvent",
    "MouseEvent",
    "MessageEvent",
    "ProgressEvent",
    "PointerEvent",
    "TransitionEvent",
    "TouchEvent",
    "WheelEvent"
]