[package]
name = "avalanche-web"
version = "0.1.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
repository = "https://github.com/DJankauskas/avalanche"
homepage = "https://github.com/DJankauskas/avalanche"
keywords = ["reactive", "web", "javascript"]
categories = ["gui", "wasm", "web-programming"]
description = "A client-side web integration for avalanche"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
avalanche = {version = "^0.1.0", path = '../avalanche'}
gloo-events = "0.1"
rustc-hash = "1.1"
clru = "0.6.1"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["enable-interning"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "EventTarget",
    "Window",
    "Text",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "HtmlHeadingElement",
    "HtmlBodyElement",
    "HtmlBodyElement",
    "HtmlQuoteElement",
    "HtmlHrElement",
    "HtmlLiElement",
    "HtmlOListElement",
    "HtmlParagraphElement",
    "HtmlPreElement",
    "HtmlUListElement",
    "HtmlAnchorElement",
    "HtmlBrElement",
    "HtmlSpanElement",
    "HtmlDataElement",
    "HtmlTimeElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlVideoElement",
    "HtmlImageElement",
    "HtmlMapElement",
    "HtmlTrackElement",
    "HtmlEmbedElement",
    "HtmlIFrameElement",
    "HtmlObjectElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlModElement",
    "HtmlTableCaptionElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableCellElement",
    "HtmlTableSectionElement",
    "HtmlTableRowElement",
    "HtmlButtonElement",
    "HtmlDataListElement",
    "HtmlDataListElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlMeterElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlProgressElement",
    "HtmlSelectElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlElement",
    "Event",
    "AnimationEvent",
    "CompositionEvent",
    "DragEvent",
    "FocusEvent",
    "KeyboardEvent",
    "MouseEvent",
    "MessageEvent",
    "ProgressEvent",
    "PointerEvent",
    "TransitionEvent",
    "TouchEvent",
    "WheelEvent"
]

[dev-dependencies]
doc-comment = "0.3"
rand = "0.8.4"