[package]
name = "avalanche"
version = "0.1.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
avalanche-macro = {path = '../avalanche-macro'}
downcast-rs = "1.1"
once_cell = "1.8"

[dev-dependencies]
avalanche-web = {path = '../avalanche-web'}
