[package]
name = "avalanche"
version = "0.1.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
repository = "https://github.com/DJankauskas/avalanche"
homepage = "https://github.com/DJankauskas/avalanche"
keywords = ["reactive"]
categories = ["gui"]
description = "A platform-independent reactive GUI library"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
avalanche-macro = {version = "^0.1.0", path = '../avalanche-macro'}

[dev-dependencies]
avalanche-web = {version = "^0.1.0", path = '../avalanche-web'}
