[package]
name = "counter"
version = "0.0.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
categories = ["web", "wasm"]
readme = "README.md"
edition = "2018"

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2"
avalanche = {path = "../../../avalanche"}
avalanche-web = {path = "../../../avalanche-web"}

console_error_panic_hook = "0.1.6"
