[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche = {path = "../../../avalanche"}
avalanche-web = {path = "../../../avalanche-web"}
rand = "0.8.4"
getrandom = { version = "0.2.7", features = ["js"] }
console_error_panic_hook = "0.1.6"
web-sys = "0.3"
