[package]
name = "todomvc"
version = "0.1.0"
authors = ["Darius Jankauskas <d5926j@gmail.com>"]
categories = ["web", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2"
web-sys = "0.3"
avalanche = {path = "../../../avalanche"}
avalanche-web = {path = "../../../avalanche-web"}

console_error_panic_hook = "0.1.6"
